# kernel-skill

./: .gitignore  README.md  blog.md  build.toml  diffusers-kernel-skill.txt  pyproject.toml
.claude/skills/cuda-kernels/: SKILL.md
.claude/skills/cuda-kernels/references/: transformers-integration.md  troubleshooting.md
.claude/skills/h100-diffusers-kernels/: SKILL.md
.claude/skills/h100-diffusers-kernels/references/: h100-optimization-guide.md  kernel-templates.md  troubleshooting.md
examples/diffusers_h100/: generate_video.py
examples/diffusers_h100/examples/: ltx_video_integration.py
examples/diffusers_h100/kernel_src/: adaln.cu  geglu.cu  rmsnorm.cu  rope.cu
examples/diffusers_h100/tests/: test_kernels.py
examples/diffusers_h100/torch-ext/: torch_binding.cpp
examples/diffusers_h100/torch-ext/ltx_kernels/: __init__.py
examples/ltx_video/: README.md  benchmark.md  build.toml  flake.nix  generate_video.py  pyproject.toml  setup.py
examples/ltx_video/kernel_src/: adaln.cu  geglu.cu  rmsnorm.cu  rope.cu
examples/ltx_video/tests/: test_kernels.py
examples/ltx_video/torch-ext/: torch_binding.cpp
examples/ltx_video/torch-ext/ltx_kernels/: __init__.py
examples/qwen3_8b/: README.md  benchmark_results.json  benchmark_rmsnorm.py  build.toml  pyproject.toml  setup.py
examples/qwen3_8b/kernel_src/: rmsnorm.cu
examples/qwen3_8b/torch-ext/: torch_binding.cpp
examples/qwen3_8b/torch-ext/qwen3_kernels/: __init__.py
