[build-system]
requires = ["setuptools>=45", "wheel", "torch>=2.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ltx-kernels"
version = "0.1.0"
description = "Optimized CUDA kernels for LTX-Video on H100 GPUs"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "torch>=2.0",
]

[project.optional-dependencies]
diffusers = [
    "diffusers>=0.25.0",
    "transformers>=4.30.0",
    "accelerate>=0.20.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.setuptools.packages.find]
where = ["torch-ext"]
include = ["ltx_kernels*"]
